--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 body,
 html {
     overflow-x: hidden;
@@ -144,6 +145,7 @@ html {
 
 .menu {
     font-family: "Be Vietnam Pro", sans-serif;
+    min-height: 80vh;
 }
 
 .menu-main-screen,
@@ -211,11 +213,12 @@ html {
     margin: 0 5px;
     margin-bottom: 5px;
     position: relative;
-    height: 80vh;
-    min-height: 100%;
+    /* height: 80vh;        */
+    /* min-height: 100%; */
     position: absolute;
     right: 0;
     top: 0;
+    bottom: 0;
 }
 
 .divider-vertical::before,
