--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* index */
 * {
     margin: 0;
     padding: 0;
@@ -135,14 +136,6 @@ html {
     box-shadow: none !important;
 }
 
-
-.container-fluid-2 {
-    margin-top: 15px;
-    max-width: 1490px;
-    margin: 15px auto 0;
-    padding: 0 15px;
-}
-
 .menu {
     font-family: "Be Vietnam Pro", sans-serif;
     min-height: 80vh;
@@ -153,7 +146,6 @@ html {
     margin-top: 20px;
     text-decoration: none;
 }
-
 
 .text-main,
 .text-service {
@@ -244,534 +236,4 @@ html {
     font-family: "Be Vietnam Pro", sans-serif;
 }
 
-
-.main-screen{
-    display: none;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    border: 1px solid #DBD6D6;
-    border-radius: 5px;
-}
-
-.main-screen.show{
-    display: block;
-    opacity: 1;
-}
-
-/* main-screen */
-.display-main-screen {
-    max-height: 75vh; 
-    overflow-y: auto; 
-    overflow-x: hidden; 
-    padding: 10px; 
-    background-color: #fff; 
-}
-
-.header-main-screen {
-    background-color: #f4f4f4;
-    padding: 10px 0;
-    border-bottom: 1px solid #DBD6D6;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.choose-service {
-    border: 1px solid #DBD6D6;
-    border-radius: 5px;
-    background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    max-width: 400px;
-    height: 38px;
-}
-
-.choose-service label {
-    margin-left: 10px;
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    color: #919191;
-}
-
-#selected-service {
-    width: 150px;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px 10px;
-    line-height: 24px;
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    color: #919191;
-}
-
-.dropdown {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 100%; 
-}
-
-.dropdown-toggle {
-    height: 100% !important; 
-    justify-content: center;
-}
-
-.dropdown-toggle::after {
-    display: none !important;
-}
-
-.dropdown-menu {
-    right: 0 !important;
-    left: auto !important;
-    transform-origin: top right !important;
-    min-width: 200px; 
-}
-
-
-
-.btn-outline-secondary {
-    background-color: white !important;
-    border: none !important; 
-    border-left: 1px solid #DBD6D6 !important; 
-    border-radius: 0 !important; 
-    margin-right: 1px;
-}
-
-.btn-outline-secondary:hover, 
-.btn-outline-secondary:focus, 
-.btn-outline-secondary:active {
-    background-color: white !important;
-    color: #6c757d !important;
-    box-shadow: none !important;
-    border-left: 1px solid #DBD6D6 !important; 
-}
-
-.search {
-    display: flex;
-    align-items: center;
-    position: relative;
-    margin-left: 20px;
-    margin-right: 25px;
-    border-radius: 5px;
-    background-color: #FFFFFF;
-    height: 38px;
-    max-width: 290px;
-}
-
-.input {
-    width: 100%;
-    height: 40px;
-    line-height: 28px;
-    padding: 0 1rem;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    outline: none;
-    color: #0d0c22;
-    transition: .3s ease;
-    border: 1px solid #DBD6D6;
-}
-
-.input::placeholder {
-    color: #919191;
-    font-weight: 500;
-    font-size: 15px;
-}
-
-.icon {
-    position: absolute;
-    right: 0rem;
-    fill: #9e9ea7;
-    width: 2.5rem;
-    height: 1.5rem;
-    cursor: pointer;
-    transition: fill 0.3s ease;
-    padding: 0.5rem;
-    border-left: 1px solid #DBD6D6;
-    height: 100%;
-}
-
-.display-section {
-    align-items: center;
-    padding: 15px;
-    background-color: #FFFFFF;
-}
-
-.display-section img {
-    width: 50px;
-    height: 50px;
-    object-fit: cover;
-}
-
-.name {
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #1A1B23;
-}
-
-.location {
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    font-size: 11px;
-    color: #919191; 
-}
-
-.line {
-    width: 1px;
-    height: 50px;
-    background-color: #DBD6D6;
-    margin: 0 15px;
-}
-
-.line-hr {
-    margin: 10px 15px;
-}
-
-.service-info p,
-.service-info span{
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #1A1B23; 
-}
-
-.number-service {
-    font-weight: 500;
-    font-size: 40px;
-    color: #1A1B23;
-}
-
-.button-main-screen {
-    gap: 10px;
-}
-
-.custom-btn-1,
-.custom-btn-2 {
-    width: 85px;
-    height: 35px;
-    border-radius: 20px;
-    border: none;
-    color: white;
-    font-weight: 500;
-    font-size: 12px;
-    display: inline-flex; 
-    justify-content: center;
-    align-items: center;
-    text-decoration: none; 
-    cursor: pointer;
-}
-
-.custom-btn-1 {
-    background: linear-gradient(45deg,#4DD969,#28CD56);
-}
-
-.custom-btn-2 {
-    background: linear-gradient(45deg,#418FF5,#1562F1);
-}
-
-/* container-service-configuration */
-.container-service-configuration {
-    display: none;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    border: 1px solid #DBD6D6;
-    border-radius: 5px;
-}
-
-.container-service-configuration.show {
-    display: block;
-    opacity: 1;
-}
-
-.header-service {
-    background-color: #f4f4f4;
-    border-bottom: 1px solid #DBD6D6;
-    padding: 10px 20px;
-}
-
-.header-service p {
-    font-weight: 500;
-    font-size: 32px;
-    color: #4F4F4F;
-}
-
-.header-service button {
-    border-radius: 20px;
-    width: 100px;
-    height: 35px;
-    border: 1px;
-    color: white;
-    align-self: center;
-    margin-right: 5px;
-    background: linear-gradient(45deg, #418FF5, #1562F1);
-}
-
-.content-service {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-.service {
-    margin-top: 25px;
-    margin-left: 40px;
-}
-
-.service img {  
-    width: 57px;
-    height: 57px;
-    border-radius: 50% !important;
-    border: 1px solid #4DD969;
-    padding: 3px;
-}
-
-
-.box-service {
-    border: 1px solid #EEEEEE;
-    width: clamp(155px, 15vw, 200px);
-    height: clamp(143px, 14vw, 180px);
-    justify-items: center;
-    align-content: center;
-    background-color: #EEEEEE;
-    border-radius: 5px;
-    margin-bottom: 25px;
-    margin-right: 15px;
-    cursor: pointer;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #FAFCFF;
-}
-
-.box-service p {
-    font-weight: 500;
-    font-size: 16px;
-    padding-top: 15px;
-    text-align: center;
-    margin: 0;
-    min-height: 48px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
-    color: #4F4F4F;
-}
-
-.vertical-line-service {
-    width: 6px;
-    border-radius: 4px;
-    margin: 20px 20px 15px 20px;
-    background-color: #DBD6D6;
-}
-
-.display-service {
-    margin-left: 30px;
-    margin-top: 25px;
-    font-family: "Be Vietnam Pro", sans-serif;
-    display: none;
-}
-
-.select-image-service {
-    gap: 25px;
-}
-
-.select-image-service img {
-    width: 57px;
-    height: 57px;
-    border: 1px solid #28CD56;
-    border-radius: 50%;
-    padding: 2px;
-}
-
-.select-image-service a {
-    color: white !important;
-    border-radius: 20px;
-    width: 86px;
-    height: 34px;
-    border: none;
-    cursor: pointer;
-    display: inline-flex; 
-    justify-content: center;
-    align-items: center;
-    text-decoration: none; 
-    cursor: pointer;
-    background: linear-gradient(45deg, #4DD969, #28CD56);
-}
-
-.service-name {
-    margin-top: 30px;
-    width: 100%;
-    max-width: 464px;
-    height: 68px;
-}
-
-.service-name input {
-    width: 100%;
-    max-width: 465px;
-    height: 38px;
-    margin-top: 10px;
-    border: 1px solid #DBD6D6;
-    border-radius: 5px;
-}
-
-.service-name p {
-    font-weight: 500;
-    font-size: 15px;
-    color: #4F4F4F;
-}
-
-.service-description {
-    width: 100%;
-    max-width: 464px;
-    height: 132px;
-    margin-top: 30px;
-}
-
-.service-description p {
-    font-weight: 500;
-    font-size: 15px;
-    color: #4F4F4F;
-}
-
-.service-description textarea {
-    width: 100%;
-    max-width: 464px;
-    height: 102px;
-    resize: none;
-    overflow: hidden;
-    border: 1px solid #DBD6D6;
-    border-radius: 5px;
-}
-
-.process-time {
-    margin-top: 15px;
-    width: 100%;
-    max-width: 448px;
-    height: 78px;
-}
-
-.process-time p {
-    font-weight: 500;
-    font-size: 15px;
-    color: #4F4F4F;
-    margin-bottom: 5px;
-}
-
-.hour-service,
-.minutes-service {
-    width: 88px;
-    height: 38px;
-    border: 1px solid #DBD6D6;
-    border-radius: 3px;
-}
-
-.minutes-service {
-    margin-left: 30px;
-}
-
-.undetermined-service {
-    width: 25px;
-    height: 25px;
-    margin-right: 5px;
-    cursor: pointer;
-}
-
-.off-service {
-    margin-top: 10px;
-}
-
-.off-service label {
-    font-weight: 500;
-    color: #4F4F4F;
-    font-size: 15px;
-}
-
-.off-service input {
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-}
-
-.button-service {
-    gap: 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-}
-
-.button-service button {
-    width: 86px;
-    height: 34px;
-    color: white;
-    border-radius: 20px;
-    border: none;
-}
-
-.cancel-service {
-    width: 86px;
-    height: 34px;
-    color: white;
-    border-radius: 20px;
-    border: none;
-    display: inline-flex; 
-    justify-content: center;
-    align-items: center;
-    text-decoration: none; 
-    cursor: pointer;
-    background: linear-gradient(45deg, #418FF5, #1562F1);
-}
-
-.save-service {
-    background: linear-gradient(45deg, #4DD969, #28CD56);
-}
-
-
-.service .col-5 {
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
-.service .col-5 {
-    padding-right: 10px;
-    padding-left: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.box-service {
-    margin-right: 15px;
-    margin-bottom: 25px;
-    flex: 0 0 auto;
-    width: 100%;
-    max-width: 200px;
-}
-
-.service .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -10px;
-}
-
-.service .col-5:first-child .box-service {
-    margin-right: 15px;
-}
-
-.service .col-5:last-child .box-service {
-    margin-left: 15px;
-}
-
-.box-service + .box-service {
-    margin-top: 15px;
-}
 
