--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,7 +60,8 @@
     .service,
     .display-service {
         width: 100% !important;
-        max-width: 600px;
+        max-width: 650px;
+        margin: 0 auto !important;
     }
 
     .display-section {
@@ -77,6 +78,11 @@
         flex-direction: row !important;
         gap: 10px;
         margin-top: 10px;
+    }
+    .vertical-line-service {
+        position: static;
+        width: 100%;
+        height: 1px;
     }
 }
 
