--- a/css/index.css
+++ b/css/index.css
@@ -139,32 +139,19 @@ html {
 
 .menu {
     font-family: "Be Vietnam Pro", sans-serif;
-    min-height: 80vh;
+    min-height: 800px;
 }
 
 .menu-main-screen,
 .menu-service-configuration,
-.menu-news-management,
-.menu-account-management {
-    /* margin-top: 20px; */
+.menu-news-management {
     text-decoration: none;
 }
 
-/* .text-main,
-.text-service,
-.text-news
-{
-    margin-left: 25px;
-} */
-
-/* .text-main {
-    margin-bottom: 15px;
-} */
 
 .text-main-1,
 .text-service-1,
-.text-news-1,
-.text-account-1 {
+.text-news-1 {
     font-weight: 500;
     font-size: 15px;
     color: #1A1B23;
@@ -172,8 +159,7 @@ html {
 
 .text-main-2,
 .text-service-2,
-.text-news-2,
-.text-account-2 {
+.text-news-2 {
     font-weight: 400;
     font-size: 10px;
     color: #919191;
@@ -193,8 +179,7 @@ html {
 
 .button-text-main,
 .button-text-service,
-.button-text-news,
-.button-text-account {
+.button-text-news {
     color: #919191;
     width: 25px;
     height: 25px;
@@ -205,8 +190,7 @@ html {
 
 .button-text-service.active,
 .button-text-main.active,
-.button-text-news.active,
-.button-text-account.active {
+.button-text-news.active{
     background-color: #28CD56;
     color: white;
 }
