--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,7 +13,7 @@
         white-space: normal;
     }
 
-    .main-layout {
+        .main-layout {
         flex-direction: column !important;
     }
 
@@ -86,8 +86,14 @@
     }
 }
 
-@media (min-width:3000px) {
-    .menu {
-        min-height: 0;
+@media (max-width:600px) {
+    .footer-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+    .pagination-container {
+        margin: 0 auto;
     }
 }
