--- a/css/modal.css
+++ b/css/modal.css
@@ -129,7 +129,7 @@
     border-radius: 3px;
 }
 /* Responsive */
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
     .custom-modal {
         width: 95%;
         margin: 1rem auto;
@@ -186,4 +186,4 @@
         padding: 0.75rem 1.5rem;
         font-size: 1.1rem;
     }
-}
+} */
