--- a/css/news-management.css
+++ b/css/news-management.css
@@ -104,7 +104,7 @@
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
-    max-width: 200px;
+    max-width: 100%;
     height: 38px;
 }
 
@@ -175,8 +175,8 @@
     cursor: pointer;
     border-radius: 50% !important;
     padding: 0;
-    width: 30px;
-    height: 30px;
+    width: 35px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
