--- a/css/main-screen.css
+++ b/css/main-screen.css
@@ -1,4 +1,8 @@
 /* .main-screen */
+body.modal-open {
+    padding-right: 0 !important; 
+}
+
 .main-screen{
     display: none;
     opacity: 0;
@@ -13,11 +17,12 @@
 }
 
 .display-main-screen {
-    max-height: 75vh; 
+    /* max-height: 75vh;  */
     overflow-y: auto; 
     overflow-x: hidden; 
     padding: 10px; 
     background-color: #fff; 
+    height: 700px;
 }
 
 .display-main-screen::-webkit-scrollbar {
@@ -58,7 +63,7 @@
 }
 
 #selected-service {
-    width: 150px;
+    width: 200px;
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
@@ -78,6 +83,37 @@
     height: 100%; 
 }
 
+.dropdown a:active {
+    box-shadow: none !important;
+    outline: none !important;
+    background-color: #e6f7ff !important;
+}
+
+#dropdown-list .dropdown-item {
+    white-space: normal;
+    word-break: break-word;
+    color: #4F4F4F;
+}
+
+#dropdown-list::-webkit-scrollbar {
+    width: 4px;
+}
+
+#dropdown-list::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 4px;
+}
+
+#dropdown-list::-webkit-scrollbar-thumb {
+    background-color: #bbb;
+    border-radius: 4px;
+}
+
+#dropdown-list::-webkit-scrollbar-thumb:hover {
+    background-color: #e6f7ff;
+    cursor: pointer;
+}
+
 .dropdown-toggle {
     height: 100% !important; 
     justify-content: center;
@@ -91,9 +127,8 @@
     right: 0 !important;
     left: auto !important;
     transform-origin: top right !important;
-    min-width: 200px; 
+    min-width: 250px; 
 }
-
 
 
 .btn-outline-secondary {
@@ -129,7 +164,7 @@
     width: 100%;
     height: 40px;
     line-height: 28px;
-    padding: 0 1rem;
+    padding: 0 4rem 0 1rem;
     border: 2px solid transparent;
     border-radius: 5px;
     outline: none;
@@ -161,6 +196,7 @@
     align-items: center;
     padding: 15px;
     background-color: #FFFFFF;
+    border-bottom:  1px solid #DBD6D6;
 }
 
 .display-section img {
@@ -178,7 +214,7 @@
 
 .location {
     font-family: "Be VietNam Pro",sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 11px;
     color: #919191; 
 }
@@ -201,11 +237,22 @@
     font-size: 16px;
     color: #1A1B23; 
 }
-
 .number-service {
+    font-family: "Be VietNam Pro",sans-serif;
     font-weight: 500;
     font-size: 40px;
+}
+.number-service.new {
     color: #1A1B23;
+}
+.number-service.reviewing {
+    color: #747775;
+}
+.number-service.inprogress {
+    color: #1450E8;
+}
+.number-service.done {
+    color: #1FA144;
 }
 
 .button-main-screen {
@@ -214,12 +261,12 @@
 
 .custom-btn-1,
 .custom-btn-2 {
-    width: 85px;
+    width: 95px;
     height: 35px;
     border-radius: 20px;
     border: none;
     color: white;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 12px;
     display: inline-flex; 
     justify-content: center;
