--- a/css/service-configuration.css
+++ b/css/service-configuration.css
@@ -33,11 +33,14 @@
     align-self: center;
     margin-right: 5px;
     background: linear-gradient(45deg, #418FF5, #1562F1);
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .service {
     margin-top: 25px;
-    max-height: 700px;
+    height: 670px;
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
@@ -47,35 +50,33 @@
     width: 57px;
     height: 57px;
     border-radius: 50% !important;
-    border: 1px solid #4DD969;
     padding: 3px;
 }
 
+.image-service {
+    border: 1px solid #4DD969;
+    border-radius: 50%;
+}
 
 .box-service {
     border: 1px solid #EEEEEE;
     width: 100%;
-    height: clamp(143px, 14vw, 180px);
+    max-width: 200px;
+    height: 180px;
     justify-items: center;
-    align-content: center;
-    background-color: #EEEEEE;
     border-radius: 5px;
-    margin-bottom: 25px;
-    margin-right: 15px;
     cursor: pointer;
-    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #FAFCFF;
+    position: relative;
 }
 
 .box-service p {
-    font-weight: 500;
     font-size: 16px;
     padding-top: 15px;
-    text-align: center;
     margin: 0;
     min-height: 48px;
     display: flex;
@@ -97,12 +98,33 @@
 }
 
 .vertical-line-service {
-    width: 6px;
-    border-radius: 4px;
+    width: 1px;
     background-color: #DBD6D6;
+    padding: 0 !important;
+    margin: 0 5px;
+    margin-bottom: 5px;
     position: absolute;
     right: 0;
     top: 0;
+    bottom: 0;
+}
+
+.vertical-line-service::before,
+.vertical-line-service::after {
+    content: "";
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    background-color: #DBD6D6;
+    transform: rotate(45deg);
+    left: -2.5px;
+}
+
+.vertical-line-service::before {
+    top: 0;
+}
+
+.vertical-line-service::after {
     bottom: 0;
 }
 
@@ -117,8 +139,8 @@
 }
 
 .select-image-service img {
-    width: 57px;
-    height: 57px;
+    width: 60px;
+    height: 60px;
     border: 1px solid #28CD56;
     border-radius: 50%;
     padding: 2px;
@@ -130,13 +152,14 @@
     width: 86px;
     height: 34px;
     border: none;
-    cursor: pointer;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
     cursor: pointer;
     background: linear-gradient(45deg, #4DD969, #28CD56);
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .service-name {
@@ -181,12 +204,10 @@
     overflow-y: auto;
 }
 
-.process-time {
+/* .process-time {
     margin-top: 15px;
     width: 100%;
-    max-width: 448px;
-    height: 78px;
-}
+} */
 
 .process-time p {
     font-weight: 500;
@@ -257,18 +278,16 @@
     text-decoration: none;
     cursor: pointer;
     background: linear-gradient(45deg, #418FF5, #1562F1);
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .save-service {
+    font-family: "Poppins", sans-serif;
+    font-size: 12px;
+    font-weight: 500;
     background: linear-gradient(45deg, #4DD969, #28CD56);
-}
-
-.box-service {
-    margin-right: 30px;
-    margin-bottom: 25px;
-    flex: 0 0 auto;
-    width: 100%;
-    max-width: 200px;
 }
 
 .number-input-wrapper {
@@ -314,4 +333,35 @@
 
 .number-input-wrapper input[type="number"]:focus {
     background-color: #fff;
+}
+
+.box-service.selected {
+    background-color: #e6f7ff;
+    transition: background-color 0.3s ease;
+}
+
+.disabled-box img {
+    filter: blur(2px) contrast(0.85) saturate(1.1);
+    transition: filter 0.3s ease;
+}
+
+.disabled-box .image-service {
+    border: 1px solid #ABABAB;
+}
+
+.disabled-box p {
+    color: #ABABAB;
+}
+
+.box-service.disabled-box::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30px;
+    height: 30px;
+    background: #A7A7A7;
+    border-top-right-radius: 5px;
+    clip-path: polygon(100% 0, 100% 100%, 0 0);
+    z-index: 2;
 }
