--- a/css/main-screen.css
+++ b/css/main-screen.css
@@ -282,3 +282,33 @@ body.modal-open {
 .custom-btn-2 {
     background: linear-gradient(45deg,#418FF5,#1562F1);
 }
+
+/*  */
+.quill-editor {
+    height: 200px !important;
+    background-color: white;
+    overflow-y: auto;
+    border: 1px solid #EEEEEE;
+    border-radius: 5px;
+}
+
+.quill-editor p {
+    font-family: "Be VietNam pro",sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #1A1B23;
+}
+
+.ql-editor img {
+    max-width: 100%;
+    height: auto;
+    max-height: 200px;
+}
+
+.ql-toolbar.ql-snow {
+    border-radius: 0.375rem 0.375rem 0 0;
+}
+
+.ql-container.ql-snow {
+    border-radius: 0 0 0.375rem 0.375rem;
+}
