--- a/css/main-screen.css
+++ b/css/main-screen.css
@@ -312,3 +312,46 @@ body.modal-open {
 .ql-container.ql-snow {
     border-radius: 0 0 0.375rem 0.375rem;
 }
+
+
+/* request-history */
+.status.done {
+    font-family: "Be VietNam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #1FA144;
+}
+
+.status.cancel {
+    font-family: "Be VietNam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #E81414;
+}
+
+.officer-name {
+    font-family: "Be VietNam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: #919191;
+}
+
+.input-group {
+    width: 220px;
+}
+
+.input-group-text {
+    cursor: pointer;
+}
+.datepicker table ,
+#datepicker {
+    margin: 0 auto !important;
+    font-family: "Be VietNam Pro",sans-serif !important;
+    font-weight: 500 !important;
+    font-size: 15px !important;
+}
+
+.datepicker table tr td.active {
+    background-color: #28CD56 !important;
+    background-image: none !important;
+}
