--- a/css/main-screen.css
+++ b/css/main-screen.css
@@ -315,6 +315,23 @@ body.modal-open {
 
 
 /* request-history */
+.content-request-history {
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 10px;
+    background-color: #fff;
+    height: 650px;
+}
+
+.content-request-history::-webkit-scrollbar {
+    width: 5px;
+}
+
+.content-request-history::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 10px;
+}
+
 .status.done {
     font-family: "Be VietNam Pro", sans-serif;
     font-weight: 500;
@@ -354,4 +371,43 @@ body.modal-open {
 .datepicker table tr td.active {
     background-color: #28CD56 !important;
     background-image: none !important;
+}
+
+/* pagination */
+
+.request-pagination {
+    border: 1px solid #D5D5D5;
+    border-radius: 10px;
+}
+
+.request-pagination ul {
+    margin-bottom: 0;
+}
+
+.page-link {
+    cursor: pointer;
+    border-radius: 50% !important;
+    padding: 0;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.3s ease;
+    color: #959494;
+}
+
+.page-item {
+    margin: 3px 3px 0px 3px;
+}
+
+.page-item .page-link:hover {
+    background-color: #D5D5D5;
+    color: white;
+}
+
+.page-item.active .page-link {
+    border-color: #D5D5D5;
+    background-color: #D5D5D5;
+    color: white;
 }
