--- a/css/user-history.css
+++ b/css/user-history.css
@@ -86,6 +86,14 @@
     flex-shrink: 0;
 }
 
+.detail-content-container {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
+
 .detail-content {
     white-space: nowrap;
     overflow: hidden;
@@ -233,4 +241,21 @@
     border-color: #D5D5D5;
     background-color: #D5D5D5;
     color: white;
+}
+
+/* modal log */
+#detail {
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 10px;
+    height: 300px;
+}
+
+#detail::-webkit-scrollbar {
+    width: 5px;
+}
+
+#detail::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 10px;
 }
