--- a/css/user-history.css
+++ b/css/user-history.css
@@ -17,6 +17,9 @@
 }
 
 .header-news button {
+    font-family: "Poppins",sans-serif;
+    font-size: 12px;
+    font-weight: 500;
     border-radius: 20px;
     width: 100px;
     height: 35px;
@@ -25,6 +28,27 @@
     align-self: center;
     margin-right: 5px;
     background: linear-gradient(45deg, #F55641, #F14515);
+}
+
+/* select date */
+.input-group-text {
+    cursor: pointer;
+}
+.datepicker table ,
+#datepicker {
+    margin: 0 auto !important;
+    font-family: "Be VietNam Pro",sans-serif !important;
+    font-weight: 500 !important;
+    font-size: 15px !important;
+}
+
+.datepicker table tr td.active {
+    background-color: #28CD56 !important;
+    background-image: none !important;
+}
+
+.datepicker.dropdown-menu {
+    max-height: none;
 }
 
 .content p {
