--- a/css/news-management.css
+++ b/css/news-management.css
@@ -472,6 +472,40 @@
     border-radius: 0 0 0.375rem 0.375rem;
 }
 
+.ql-snow {
+    .ql-picker {
+        &.ql-size {
+            .ql-picker-label,
+            .ql-picker-item {
+                &::before {
+                    content: attr(data-value) !important;
+                }
+            }
+        }
+    }
+}
+
+.ql-picker-options {
+    height: 120px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.ql-picker-options::-webkit-scrollbar {
+    width: 6px;
+}
+
+.ql-picker-options::-webkit-scrollbar-thumb {
+    background-color: #D9D9D9;
+    border-radius: 3px;
+}
+
+.ql-snow .ql-picker.ql-size {
+    width: 50px !important;
+}
+
+/*  */
+
 .publish-articles {
     margin-top: 10px;
 }
