--- a/css/index.css
+++ b/css/index.css
@@ -34,13 +34,14 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 2px;
+    padding: 5px;
     z-index: 10;
 }
 
 .logo {
     width: 100px;
-    height: auto;
+    height: 100px;
+    object-fit: contain;
     border-radius: 50%;
     padding: 5px;
 }
