--- a/css/management-kiosk.css
+++ b/css/management-kiosk.css
@@ -128,6 +128,7 @@ main {
     background-color: #FAFCFF;
     border: 1px solid #EEEEEE;
     border-radius: 5px;
+    height: 170px;
 }
 
 .kiosk-wrapper img {
