--- a/css/management-kiosk.css
+++ b/css/management-kiosk.css
@@ -4,19 +4,20 @@
     box-sizing: border-box;
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
-  flex: 1; 
+    flex: 1;
 
 }
 
@@ -104,13 +105,14 @@ main {
 
 .display-kiosk {
     height: 61vh;
-    overflow-y: auto; 
-    overflow-x: hidden; 
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .display-kiosk::-webkit-scrollbar {
     width: 6px;
 }
+
 .display-kiosk::-webkit-scrollbar-thumb {
     background-color: #D9D9D9;
     border-radius: 3px;
@@ -129,6 +131,7 @@ main {
     border: 1px solid #EEEEEE;
     border-radius: 5px;
     height: 170px;
+    cursor: pointer;
 }
 
 .kiosk-wrapper img {
@@ -159,4 +162,90 @@ main {
     height: 50px;
     border-radius: 50%;
     border: 1px solid #28CD56;
+}
+
+
+/* modal infomodal*/
+#infoModal {
+    z-index: 1061;
+}
+
+#infoModal .modal-body ul {
+    list-style: none;
+}
+
+#infoModal .modal-body ul li {
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000000;
+    line-height: 30px;
+}
+
+#infoModal .modal-footer button {
+    color: white;
+    background: linear-gradient(#418FF5, #1562F1);
+    width: 86px;
+    height: 34px;
+    border: none;
+    border-radius: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+/* kiosk modal */
+#kioskModal .modal-header {
+    background-color: #EEEEEE;
+}
+
+#kioskModal .modal-header p {
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: #000000;
+}
+
+#kioskModal .line-modal {
+    width: 2px;
+    background-color: #EEEEEE;
+
+}
+
+#kioskModal .modal-body ul {
+    list-style: none;
+    font-family: "Be Vietnam Pro", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    color: #000000;
+}
+
+#kioskModal .modal-body ul li {
+    margin-left: 10px;
+    line-height: 30px;
+}
+
+#kioskModal .modal-footer {
+    justify-content: flex-start;
+}
+
+#kioskModal .modal-footer button {
+    color: white;
+    border: none;
+    border-radius: 20px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.button-close {
+    width: 86px;
+    height: 34px;
+    background: linear-gradient(#418FF5, #1562F1);
+}
+
+.button-stt {
+    width: 136px;
+    height: 34px;
+    background: linear-gradient(#4DD969, #28CD56);
 }
